LNC-209: Common service integration